# BM3D

BM3D_GPU/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Common.h  Makefile  bm3d.cu  bm3d.cu~  bm3d.h  bm3d.h~  bm3d_gpu  cmake_install.cmake  cudaprof  debug  main.cpp  main.cpp~  run.sh  run.sh~  utilities.cpp  utilities.cpp~  utilities.h  utilities.h~
BM3D_GPU3/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  bm3d.cu  bm3d.cu~  bm3d.h  bm3d.h~  bm3d_gpu  cmake_install.cmake  cudaprof  cudaprof~  debug  debug~  main.cpp  main.cpp~  out.txt  prof.nvprof  run.sh  run.sh~  runtest.sh  runtest.sh~  test.txt  timeutil.cpp  timeutil.cpp~  timeutil.h  timeutil.h~  utilities.cpp  utilities.cpp~  utilities.h  utilities.h~
BM3D_IPOL/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  bm3d.cpp  bm3d.h  bm3d_cpu  cmake_install.cmake  measures.txt  utilities.h  utilities.h~
bm3d_cpu/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  bm.cpp  bm.h  bm3d.cpp  bm3d.h  bm3d_cpu  bm3d_cpu.cbp  bm3d_cpu.depend  bm3d_cpu.layout  cmake_install.cmake  compile.sh  imghelper.cpp  imghelper.h  imghelpercuda.cu  imghelpercuda.h  main.cpp  oldcode.txt  result.sh  run.sh  util.cpp  util.h
bm3d_cpu/BM3D_CPU/: BM3D_CPU.cbp  BM3D_CPU.layout
report/: abstract.aux  abstract.tex  abstract.tex.aux  biblio.bib  bm3d_algo.aux  bm3d_algo.tex  conclusion.aux  conclusion.tex  introduction.aux  introduction.tex  rapport.tex  rapport2.aux  rapport2.bbl  rapport2.blg  rapport2.lof  rapport2.tex  rapport2.toc  realisation.aux  realisation.tex  resultats.aux  (+1 more)
(+530 files in other folders)
